--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="header_inner" id="g-nav">
                         <li class="position-now"><a href="#home">Home</a></li>
                         <li><a href="#work-list_anchor">Work</a></li>
-                        <!-- <li><a href="about.html">About</a></li> -->
+                        <li><a href="about.html">About</a></li>
                     </ul>
                 </header>
             </div>
@@ -37,7 +37,7 @@
                                 <h2 class="title02">Designer</h2>
                             </div>
                         </div>
-                        <p class="text">Hi, I’m Kanae and a digital designer.<br>I mainly create<span class="text_orange"> web design</span>,<br>but also have experience of<br>creating <span class="text_orange">video design</span>, <br class="no_sp"><span class="text_orange">logos</span> and  <br class="no_pc"><span class="text_orange">shop sign design</span>.</p>
+                        <p class="text no_sp">Hi, I’m Kanae and a digital designer.<br>I mainly create<span class="text_orange"> web designs</span>,<br>but also have experience of<br>creating <span class="text_orange">video designs</span>, <br><span class="text_orange">logos</span> and <span class="text_orange">a shop sign design</span>.</p>
                         <div class="fluid"></div>
                     </div>
                     <div class="wrapper_rigth">
@@ -51,8 +51,9 @@
                             <source media="(min-width: 577px)" srcset="img/home/mv_img_pc.png">
                             <img src="img/home/mv_img_sp.png" alt="mv_img">
                         </picture>
-                       
+                        <div class="fluid"></div>
                     </div>
+                    <p class="text no_pc">Hi, I’m Kanae and a digital designer.<br>I mainly create<span class="text_orange"> web design</span>, but also have experience of creating <span class="text_orange">video design</span>, <span class="text_orange">logos</span> and <span class="text_orange">shop sign design</span>.</p>
                 </section>
                 <section class="main scroll-point" id="work-list">
                     <a id="work-list_anchor" class="work-list_anchor"></a>
