--- a/work/video01.html
+++ b/work/video01.html
@@ -23,7 +23,7 @@
                     <ul class="header_inner">
                         <li><a href="../index.html">Home</a></li>
                         <li class="current-page"><a href="../index.html#work-list_anchor">Work</a></li>
-                        <!-- <li><a href="../about.html">About</a></li> -->
+                        <li><a href="../about.html">About</a></li>
                     </ul>
                 </header>
             </div>
