--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                         <ul class="content_margin">
                             <li class="column_wrapper">
                                 <div class="left_title">
-                                    <h4 class="title">Junior Web Designer</h4>
+                                    <h4 class="title">Web Designer</h4>
                                     <p class="company-name">Funny pro (Tokyo)</p>
                                 </div>
                                 <div class="right_date">
