--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                         <h3 class="contents-title">Language</h3>
                         <ul class="skill_item_wrapper content_margin">
                             <li class="skill_item">Japanese<span class="skill_detail">native</span></li>
-                            <li class="skill_item">English<span class="skill_detail">intermediate</span></li>
+                            <li class="skill_item">English<span class="skill_detail">uper intermediate</span></li>
                             <li class="skill_item">Polish<span class="skill_detail">basic</span></li>
                         </ul>
                         <div class="fluid"></div>
