--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                             <div class="tab_panel-box tab_panel-box-website is-shown" data-panel="website">
                                 <ul class="work-box">
                                     <li class="work-box-item">
-                                        <a href="work/website01.html">
+                                        <a href="work/website03.html">
                                             <div class="work-box-image">
-                                                <img src="img/home/work/website01.jpg">
+                                                <img src="img/home/work/website03.jpg">
                                             </div>
                                             <div class="box-text">
-                                                <p class="company-name">Tera Technology</p>
+                                                <p class="company-name">Nintendo Sales</p>
                                                 <ul class="tag-role">
                                                     <li>UI design</li>
-                                                    <li>fixed html / css / javascript</li>
+                                                    <li>html/css</li>
                                                 </ul>
                                             </div>
                                         </a>
@@ -90,6 +90,20 @@
                                                 <p class="company-name">EP Link</p>
                                                 <ul class="tag-role">
                                                     <li>UI design</li>
+                                                </ul>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="work-box-item">
+                                        <a href="work/website01.html">
+                                            <div class="work-box-image">
+                                                <img src="img/home/work/website01.jpg">
+                                            </div>
+                                            <div class="box-text">
+                                                <p class="company-name">Tera Technology</p>
+                                                <ul class="tag-role">
+                                                    <li>UI design</li>
+                                                    <li>fixed html / css / javascript</li>
                                                 </ul>
                                             </div>
                                         </a>
