--- a/work/video01.html
+++ b/work/video01.html
@@ -71,12 +71,12 @@
                         <div class="next-project_box_inner">
                             <ul class="next-project_box">
                                 <li class="next-project_box-item">
-                                    <a href="website01.html">
+                                    <a href="website03.html">
                                         <div class="next-project_img">
-                                            <img src="../img/home/work/website01.jpg">
+                                            <img src="../img/home/work/website03.jpg">
                                         </div>
-                                        <P class="project-name">Career Site</P>
-                                        <p class="company-name">IT</p>
+                                        <p class="project-name">Nintendo Sales</p>
+                                        <p class="company-name">Sales</p>
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
@@ -88,6 +88,15 @@
                                         <p class="company-name">Healthcare</p>
                                     </a>
                                 </li>
+                                <li class="next-project_box-item">
+                                    <a href="website01.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/website01.jpg">
+                                        </div>
+                                        <P class="project-name">Career Site</P>
+                                        <p class="company-name">IT</p>
+                                    </a>
+                                </li>s
                                 <li class="next-project_box-item">
                                     <a href="banner01.html">
                                         <div class="next-project_img">
