--- a/work/website01.html
+++ b/work/website01.html
@@ -37,7 +37,7 @@
                         <div class="MV_bottom">
                             <div class="myrole">
                                 <p class="title">My Role</p>
-                                <p class="role">UI design, Fixed html css, Javascript</p>
+                                <p class="role">UI design, Fixed html/css, Javascript</p>
                             </div>
                             <div class="btn_visit">
                                 <a href="https://www.teratech.co.jp/recruit/" target="_blank">Visit Website</a>
@@ -86,6 +86,15 @@
                     <div class="next-project_box_wrapper">
                         <div class="next-project_box_inner">
                             <ul class="next-project_box">
+                                <li class="next-project_box-item">
+                                    <a href="website03.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/website03.jpg">
+                                        </div>
+                                        <p class="project-name">Nintendo Sales</p>
+                                        <p class="company-name">Sales</p>
+                                    </a>
+                                </li>
                                 <li class="next-project_box-item">
                                     <a href="website02.html">
                                         <div class="next-project_img">
