--- a/work/website03.html
+++ b/work/website03.html
@@ -31,16 +31,16 @@
                 <section class="MV">
                     <!-- <div class="inner"> -->
                         <div class="company">
-                            <p class="name">EP Link</p><div class="line"></div><p class="industry">Healthcare</p>
+                            <p class="name">Nintendo Sales</p><div class="line"></div><p class="industry">Sales</p>
                         </div>
                         <h2 class="MV_title">Career Site</h2>
                         <div class="MV_bottom">
                             <div class="myrole">
                                 <p class="title">My Role</p>
-                                <p class="role">UI design (subpages)</p>
+                                <p class="role">UI design, html/css</p>
                             </div>
                             <div class="btn_visit">
-                                <a href="https://www.ep-link.co.jp/recruit/" target="_blank">Visit Website</a>
+                                <a href="https://www.nintendo-sales.co.jp/jobs/" target="_blank">Visit Website</a>
                             </div>
                         </div>
                         <div class="fluid"></div>
@@ -48,31 +48,31 @@
                 </section>
                 <section class="main">
                     <!-- <div class="inner"> -->
-                        <img class="main-img" src="../img/work/website/website02/main-img.jpg">
+                        <img class="main-img" src="../img/work/website/website03/main-img.jpg">
                         <div class="explanation">
                             <div class="project">
                                 <div class="text">
                                     <h3>Project</h3>
-                                    <p>The client company is involved in clinical trials. This project involves renewing their recruitment site, which has become outdated. The company is now actively recruiting, including individuals without experience as Clinical Research Coordinators (CRC). However, many potential candidates are unfamiliar with the CRC role, leading to a shortage of applicants. To address this, the new recruitment site will provide detailed information about the CRC position, allowing people to learn about the role from the basics to the finer details. Our team will focus on creating comprehensive content to educate potential candidates about the CRC job.</p>
+                                    <p>This client is a subsidiary of a gaming company, responsible for promoting the sales of their games. In this project, the client required us to renovate several existing pages of their career site, including the top page. The client wanted the website to be simpler and shorter than the previous version to make it easier to convey information to potential candidates.</p>
                                 </div>
                                 <div class="work_img01">
-                                    <img src="../img/work/website/website02/project_img.png">
+                                    <img src="../img/work/website/website03/project_img.png">
                                 </div>
                             </div>
                             <div class="visual-design">
                                 <div class="work_img02">
-                                    <img src="../img/work/website/website02/visual-design_img.png">
+                                    <img src="../img/work/website/website03/visual-design_img.png">
                                 </div>
                                 <div class="text">
                                     <h3>Visual Design</h3>
-                                    <p>The CRC role requires high accuracy, serious responsibility, and perseverance to develop new medicines. Therefore, the client company seeks candidates with these qualities. Additionally, the client wants candidates to understand that being a CRC is a rewarding occupation, allowing them to contribute to society by supporting the creation of new medicines. As a result, our team decided to make the website look dignified.<br>My role in this project was to design the UI for several subpages (11 pages). I ensured that the UI design followed the tone and mood of the top page.</p>
+                                    <p>In this project, I specifically focused on creating a layout that allows users to view an entire page with minimal scrolling while making it easy for them to understand the information.<br>For example, I arranged the subpage links as boxes with pictures on the top page. This way, users can see all the content on one screen while also getting an idea of what kind of content to expect on the subpages from the images. For the main visual, I used a carousel layout to show potential candidates the company's atmosphere through multiple pictures displayed on one screen.</p>
                                     <div class="fluid"></div>
                                 </div>
                             </div>
                         </div>
                         <div class="other-img">
-                            <img src="../img/work/website/website02/other-img01.jpg">
-                            <img src="../img/work/website/website02/other-img02.jpg">
+                            <img src="../img/work/website/website03/other-img01.jpg">
+                            <img src="../img/work/website/website03/other-img02.jpg">
                             <div class="fluid"></div>
                         </div>
                     <!-- </div> -->
@@ -87,12 +87,12 @@
                         <div class="next-project_box_inner">
                             <ul class="next-project_box">
                                 <li class="next-project_box-item">
-                                    <a href="website03.html">
+                                    <a href="website02.html">
                                         <div class="next-project_img">
-                                            <img src="../img/home/work/website03.jpg">
+                                            <img src="../img/home/work/website02.jpg">
                                         </div>
-                                        <p class="project-name">Nintendo Sales</p>
-                                        <p class="company-name">Sales</p>
+                                        <p class="project-name">Career Site</p>
+                                        <p class="company-name">Healthcare</p>
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
