--- a/work/video01.html
+++ b/work/video01.html
@@ -73,7 +73,7 @@
                                         <div class="next-project_img">
                                             <img src="../img/home/work/website03.jpg">
                                         </div>
-                                        <p class="project-name">Nintendo Sales</p>
+                                        <p class="project-name">Career Site</p>
                                         <p class="company-name">Sales</p>
                                     </a>
                                 </li>
